--- a/Home.html
+++ b/Home.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Custom CSS -->
     <style>
         /* Header styles */
         header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
             background-color: #333;
             color: #fff;
+            padding: 20px;
         }
 
         header img {
@@ -20,24 +20,23 @@
         }
 
         /* Navigation styles */
-        nav {
-            display: flex;
+        .navbar {
+            background-color: #333;
         }
 
-        nav a {
+        .navbar-brand,
+        .navbar-nav a {
             color: #fff;
-            text-decoration: none;
-            margin-left: 20px;
-            font-weight: bold;
         }
 
         /* Featured post styles */
         .featured-post {
+            background-color: #f2f2f2;
+            padding: 20px;
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
-            padding: 20px;
-            background-color: #f2f2f2;
         }
 
         .featured-post img {
@@ -47,63 +46,69 @@
             margin-right: 20px;
         }
 
-        /* Media query for tablet */
-        @media (max-width: 768px) {
-            header {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            nav {
-                margin-top: 20px;
-            }
-
-            nav a {
-                margin: 0 10px;
-            }
-
-            .featured-post {
-                flex-direction: column;
-                align-items: center;
+        /* Media query for responsive design */
+        @media (max-width: 992px) {
+            header img {
+                height: 30px;
             }
 
             .featured-post img {
                 height: auto;
                 width: 100%;
-                margin: 0;
-            }
-        }
-
-        /* Media query for mobile */
-        @media (max-width: 480px) {
-            nav {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            nav a {
-                margin: 10px 0;
+                margin-bottom: 20px;
             }
         }
     </style>
 </head>
 <body>
 <header>
-    <img src="logo.png" alt="My Blog">
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-    </nav>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-3">
+                <img src="logo.png" alt="My Blog">
+            </div>
+            <div class="col-md-9">
+                <nav class="navbar navbar-expand-md">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
 </header>
 
 <div class="featured-post">
-    <img src="featured-post.jpg" alt="Featured Post Image">
-    <div>
-        <h2> Title</h2>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <a href="#">Read More</a>
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <img src="featured-post.jpg" alt="Featured Post Image">
+            </div>
+            <div class="col-md-6">
+                <h2>Featured Post Title</h2>
+                <p>Featured post excerpt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="#" class="btn btn-primary">Read More</a>
+            </div>
+        </div>
     </div>
 </div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.js">
+</script>
 </body>
 </html>
+
