--- a/home.html
+++ b/home.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog</title>
-    <!-- Bootstrap CSS -->
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- Custom CSS -->
+
     <style>
-        /* Header styles */
+
         header {
             background-color: #333;
             color: #fff;
@@ -19,7 +19,7 @@
             height: 50px;
         }
 
-        /* Navigation styles */
+
         .navbar {
             background-color: #333;
         }
@@ -29,7 +29,6 @@
             color: #fff;
         }
 
-        /* Featured post styles */
         .featured-post {
             background-color: #f2f2f2;
             padding: 20px;
@@ -46,7 +45,6 @@
             margin-right: 20px;
         }
 
-        /* Media query for responsive design */
         @media (max-width: 992px) {
             header img {
                 height: 30px;
@@ -75,13 +73,13 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="nav-link" href="home.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Blog</a>
+                                <a class="nav-link" href="blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="contact.php">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -106,7 +104,7 @@
     </div>
 </div>
 
-<!-- Bootstrap JS -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.js">
 </script>
 </body>
