--- a/single_post.html
+++ b/single_post.html
@@ -6,18 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Blog - Single Post</title>
 
-    <!-- Bootstrap CSS -->
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-    <!-- Font Awesome Icons -->
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 
-    <!-- Custom CSS -->
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- Header -->
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">My Blog</a>
@@ -27,30 +26,30 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="home.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="blog.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.php">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
 </header>
 
-<!-- Single Post Section -->
+
 <section class="single-post py-5">
     <div class="container">
         <div class="row">
 
-            <!-- Post Image -->
+
             <div class="col-md-6">
                 <img src="https://picsum.photos/600/400" alt="Post Image" class="img-fluid">
             </div>
 
-            <!-- Post Content -->
+
             <div class="col-md-6">
                 <h1 class="mb-4">Lorem ipsum dolor sit amet</h1>
                 <p class="text-muted mb-3"><small>Posted by John Doe on June 15, 2023</small></p>
@@ -61,7 +60,7 @@
         </div>
     </div>
 
-    <!-- Share Buttons -->
+
     <div class="row mt-5">
         <div class="col-md-6">
             <p class="mb-3"><small>Share this post:</small></p>
@@ -73,7 +72,7 @@
     </div>
 
 </section>
-<!-- Bootstrap JS -->
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
